<resources>
    <string name="app_name">Outreach</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="fragment_community_broser_label">Communities</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hint_community_name">My Community</string>
    <string name="label_community_description">Description</string>
    <string name="hint_community_description">A brief text describing the group</string>
    <string name="command_menu_community_addconfirm">Create</string>
    <string name="add_community">Create New Community</string>
    <string name="label_select_contacts">Select contacts</string>
    <string name="contact_picture">Contact Picture</string>
    <string name="label_contact_name">Name:</string>
    <string name="enter_name">Enter Name of Contact</string>
    <string name="enter_community_name">Enter Community Name</string>
    <string name="label_contact_community">Community:</string>
    <string name="label_contact_phone">Phone:</string>
    <string name="label_contact_freetext_notes">Notes</string>
    <string name="error_cant_read_contact">Can\'t read Contact.</string>
    <string name="action_history">Check Log</string>
    <string name="action_call">Make Contact</string>
    <string name="error_contact_not_found">Contact not found. This is unexpected.</string>
    <string name="error_cant_create_community">An error occurred when adding the community.</string>
    <string name="command_menu_contact_save">Save</string>
    <string name="message_contact_save_done">Contact saved.</string>
    <string name="command_menu_filter">Filter</string>
    <string name="search_title">Search</string>
    <string name="action_import_contacts">Import</string>
    <string name="fragment_title_browse_communities">Communities</string>
    <string name="label_remove_contacts">Remove Contacts</string>
    <string name="action_cancel_selection">Cancel</string>
    <string name="action_delete_selection">Delete</string>
    <string name="action_select_contacts_in_community">Select</string>
    <string name="action_select_all_contacts_in_community">Select All</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="message_title_confirm_delete">Confirm deletion of the community</string>
    <string name="message_confirm_delete">The community will be permanently deleted. This operation is irreversibile. You\'re really sure to delete it?</string>
    <string name="message_error_cant_delete">Delete of Community failed.</string>
    <string name="command_menu_community_update">Update</string>
    <string name="log_try_call">Tried voice call</string>
    <string name="label_last_contact">Last Contacted:</string>
    <string name="last_contact_never">Never</string>
    <string name="format_notification_message">There are %d contacts that you may want to contact</string>
    <string name="format_notification_title">Outreach remainder</string>
</resources>
