<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_cancel_selection"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/action_cancel_selection"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_delete_selection"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/action_delete_selection"
        android:visible="false"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_select_all_contacts_in_community"
        android:title="@string/action_select_all_contacts_in_community" />
</menu>