<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/contact_picture"
        android:layout_width="128dp"
        android:layout_height="128dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:mipmap/sym_def_app_icon"
        tools:layout_editor_absoluteX="141dp" />

    <TextView
        android:id="@+id/label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_contact_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_picture" />

    <TextView
        android:id="@+id/field_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="16dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/label_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_community"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/label_name"
        app:layout_constraintTop_toBottomOf="@+id/label_name"
        android:text="@string/label_contact_community" />

    <TextView
        android:id="@+id/field_community"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@id/field_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/label_community" />

    <!-- Contact numbers and accounts -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_phone"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@+id/label_community"
        app:layout_constraintTop_toBottomOf="@+id/label_community"
        android:text="@string/label_contact_phone" />

    <TextView
        android:id="@+id/field_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@id/field_community"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/label_phone" />

    <!-- Notes -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_freetext_notes"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@+id/label_phone"
        app:layout_constraintTop_toBottomOf="@+id/label_phone"
        android:text="@string/label_contact_freetext_notes" />

    <EditText
        android:id="@+id/field_freetext_notes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:singleLine="false"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/label_freetext_notes"
        app:layout_constraintTop_toBottomOf="@+id/label_freetext_notes" />

</androidx.constraintlayout.widget.ConstraintLayout>
